--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack",
-    "build:netlify": "cross-env NODE_ENV=netlify webpack",
+    "build:netlify": "cross-env NODE_ENV=development webpack",
     "test": "cross-env NODE_ENV=test jest",
     "updateSnapshot": "cross-env NODE_ENV=test jest --updateSnapshot"
   },
