--- a/package.json
+++ b/package.json
@@ -19,56 +19,56 @@
     "updateSnapshot": "cross-env NODE_ENV=test jest --updateSnapshot"
   },
   "dependencies": {
-    "animate.css": "^3.7.2",
-    "core-js": "^3.5.0",
-    "feather-icons": "^4.25.0",
+    "animate.css": "^4.1.0",
+    "core-js": "^3.6.5",
+    "feather-icons": "^4.28.0",
     "lodash": "^4.17.15",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "regenerator-runtime": "^0.13.3",
-    "styled-components": "^4.4.1",
-    "tailwindcss": "^1.1.4",
-    "zoid": "^9.0.37"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "regenerator-runtime": "^0.13.5",
+    "styled-components": "^5.1.1",
+    "tailwindcss": "^1.4.6",
+    "zoid": "^9.0.43"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
-    "@babel/preset-react": "^7.7.4",
-    "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@testing-library/react": "^9.4.0",
-    "autoprefixer": "^9.7.3",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.6",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
+    "@fullhuman/postcss-purgecss": "^2.2.0",
+    "@testing-library/react": "^10.2.1",
+    "autoprefixer": "^9.8.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.0.1",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "clean-webpack-plugin": "^3.0.0",
-    "config": "^3.2.4",
-    "cross-env": "^6.0.3",
-    "css-loader": "^3.4.0",
+    "config": "^3.3.1",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.3",
     "eslint": "^6.7.2",
-    "eslint-config-standard": "^14.1.0",
+    "eslint-config-standard": "^14.1.1",
     "eslint-config-standard-react": "^9.2.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.13.2",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "eslint-plugin-standard": "^4.0.1",
-    "html-webpack-plugin": "^4.0.0-beta.8",
-    "husky": "^3.1.0",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.5.0",
-    "mini-css-extract-plugin": "^0.8.1",
+    "html-webpack-plugin": "^4.3.0",
+    "husky": "^4.2.5",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.9",
+    "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.19.1",
-    "sass": "^1.23.7",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.2",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
+    "prettier": "^2.0.5",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^4.2.2"
   }
 }
