--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-is": "^16.13.1",
     "regenerator-runtime": "^0.13.5",
     "styled-components": "^5.1.1",
     "tailwindcss": "^1.4.6",
@@ -61,6 +62,7 @@
     "lint-staged": "^10.2.9",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "pnp-webpack-plugin": "^1.6.4",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "sass": "^1.26.8",
